--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.everit.authentication</groupId>
     <artifactId>org.everit.authentication.http.basic.ecm.parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <groupId>org.everit.authentication</groupId>
@@ -111,7 +111,7 @@
     <dependency>
       <groupId>org.everit.authentication</groupId>
       <artifactId>org.everit.authentication.http.basic.ecm</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
@@ -137,17 +137,17 @@
     <dependency>
       <groupId>org.everit.props</groupId>
       <artifactId>org.everit.props.ri.ecm</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.everit.authentication</groupId>
       <artifactId>org.everit.authentication.context.ri.ecm</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.everit.authentication</groupId>
       <artifactId>org.everit.authentication.simple.ecm</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
 
     <dependency>
@@ -155,20 +155,7 @@
       <artifactId>org.everit.web.servlet</artifactId>
       <version>1.0.0</version>
     </dependency>
-    
-    <!-- Basic OSGi to tests -->
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>5.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.compendium</artifactId>
-      <version>5.0.0</version>
-      <scope>provided</scope>
-    </dependency>
+
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
       <artifactId>org.everit.osgi.dev.testrunner.junit4</artifactId>
@@ -239,6 +226,11 @@
       <groupId>org.everit.osgi</groupId>
       <artifactId>org.everit.osgi.jetty.boot</artifactId>
       <version>1.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.everit.jetty</groupId>
+      <artifactId>org.everit.jetty.server.ecm</artifactId>
+      <version>1.0.0</version>
     </dependency>
      
     <!-- Felix webconsole with dependencies -->
