--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -69,7 +69,7 @@
       <plugin>
         <groupId>org.everit.osgi.dev</groupId>
         <artifactId>eosgi-maven-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.3.3</version>
         <executions>
           <execution>
             <id>integration-test</id>
@@ -117,7 +117,7 @@
     <dependency>
       <groupId>org.everit.resource</groupId>
       <artifactId>org.everit.resource.ri.ecm</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.everit.password</groupId>
@@ -137,7 +137,7 @@
     <dependency>
       <groupId>org.everit.props</groupId>
       <artifactId>org.everit.props.ri.ecm</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.everit.authentication</groupId>
@@ -147,7 +147,7 @@
     <dependency>
       <groupId>org.everit.authentication</groupId>
       <artifactId>org.everit.authentication.simple.ecm</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -156,6 +156,13 @@
       <version>1.0.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <version>5.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
       <artifactId>org.everit.osgi.dev.testrunner.junit4</artifactId>
@@ -223,9 +230,9 @@
     
     <!-- Jetty with Http Service -->
     <dependency>
-      <groupId>org.everit.osgi</groupId>
-      <artifactId>org.everit.osgi.jetty.boot</artifactId>
-      <version>1.0.2</version>
+      <groupId>org.everit.jetty</groupId>
+      <artifactId>org.everit.jetty.osgi.boot</artifactId>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.everit.jetty</groupId>
@@ -331,24 +338,14 @@
     <dependency>
       <groupId>org.everit.persistence</groupId>
       <artifactId>org.everit.persistence.liquibase.datasource.ecm</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <!-- Dependencies needed by QueryDSL -->
     <dependency>
       <groupId>org.everit.persistence</groupId>
-      <artifactId>org.everit.persistence.querydsl.sqltemplates.ecm</artifactId>
-      <version>1.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.everit.persistence</groupId>
-      <artifactId>org.everit.persistence.querydsl.configuration.ecm</artifactId>
-      <version>1.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.everit.persistence</groupId>
-      <artifactId>org.everit.persistence.querydsl.support.ri.ecm</artifactId>
-      <version>1.0.0</version>
+      <artifactId>org.everit.persistence.querydsl.ecm</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
